deletion/add + highlight + separators

--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-date-picker/generic-date-picker.component.html
@@ -4,6 +4,6 @@
       class="form-label">{{label}}</label>
     <input class="form-control form-control" [min]="getDateFormated(minDate)" [max]="getDateFormated(maxDate)"
       [id]="'fl-text'+uniqueId" (change)="dateChange()" [required]="isMandatory" [formControlName]="propertyName"
-      [placeholder]="label" (blur)="blurForm()" type="date">
+      [placeholder]="label" (blur)="blurForm()" (focus)="focusForm()" type="date">
   </div>
 </div>
