--- a/client-myjss/src/app/modules/miscellaneous/components/forms/select-building-domiciliation/select-building-domiciliation.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/select-building-domiciliation/select-building-domiciliation.component.html
@@ -3,7 +3,7 @@
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0"
       class="form-label">{{label}}</label>
     <select class="form-control " [formControlName]="propertyName" [id]="'fl-text'+uniqueId" [required]="isMandatory"
-      [compareWith]="compareWithId" (blur)="blurForm()" [disabled]="isDisabled"
+      [compareWith]="compareWithId" (blur)="blurForm()" (focus)="focusForm()" [disabled]="isDisabled"
       [class.is-invalid]="form.get(propertyName)?.invalid && form.get(propertyName)?.touched"
       [class.is-valid]="form.get(propertyName)?.valid && form.get(propertyName)?.touched">
       <ng-container *ngFor="let type of types">
