--- a/client-myjss/src/app/modules/my-account/components/pay-quotation/pay-quotation.component.html
+++ b/client-myjss/src/app/modules/my-account/components/pay-quotation/pay-quotation.component.html
@@ -53,7 +53,9 @@
           </div>
           <p>Pour payer par virement le montant de <strong>{{invoiceSummary.remainingToPay | currency:'EUR' }}</strong>,
             utilisez les
-            informations suivantes :</p>
+            informations suivantes :</p>.
+          <p>Titulaire : STE DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES
+          </p>
           <p class="text-center"> {{JSS_IBAN}} <i style="cursor: pointer;" [copy-clipboard]="JSS_IBAN"
               (copied)="notifyCopied( )" class="ai-copy" placement="right"
               ngbTooltip="Copier dans le presse-papier"></i>
