--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -169,6 +169,7 @@
     <p style="font-size: 16px;">Vous pouvez effectuer les paiements par virement en utilisant les informations
         ci-dessous. <br /><strong>Veuillez indiquer absolument la référence de la commande et / ou de la facture dans le
             libellé de votre virement</strong></p>
+    <p style="font-size: 16px;">Titulaire : STE DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES</p>
     <p style="font-size: 16px;">IBAN / BIC : <span th:text="${ibanJss}"></span> <span th:text="${bicJss}"></span></p>
     <p style="font-size: 16px; text-align: left;">Dans l’attente,<br />
         Cordialement.<br />
