--- a/src/main/resources/mails/templates/billing-closure.html
+++ b/src/main/resources/mails/templates/billing-closure.html
@@ -196,9 +196,10 @@
                                                                     compte client n°<span th:text="${tiers.id}">.</span>
                                                                 </p>
                                                                 <p>Vous disposez de plusieurs moyens de règlement :</p>
-                                                                <p>➡️ <strong>Virement : </strong><br />IBAN /
-                                                                    BIC : <span th:text="${ibanJss}"></span> / <span
-                                                                        th:text="${bicJss}"></span></p>
+                                                                <p>➡️ <strong>Virement : </strong><br />Titulaire : STE
+                                                                    DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES<br />
+                                                                    IBAN / BIC : <span th:text="${ibanJss}"></span> /
+                                                                    <span th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en utilisant les
                                                                     liens présents dans le relevé.</p>
                                                             </td>
