--- a/src/main/resources/mails/templates/waiting-quotation-validation.html
+++ b/src/main/resources/mails/templates/waiting-quotation-validation.html
@@ -260,9 +260,11 @@
                                                                 <p>➡️ <strong>Virement</strong> en indiquant cette
                                                                     référence dans le
                                                                     libellé : <span
-                                                                        th:text="${quotation.id}"></span><br />IBAN /
-                                                                    BIC : <span th:text="${ibanJss}"></span> / <span
-                                                                        th:text="${bicJss}"></span></p>
+                                                                        th:text="${quotation.id}"></span><br />Titulaire
+                                                                    : STE DE PUBLICATIONS ET PUBLICITE POUR LES
+                                                                    SOCIETES<br />
+                                                                    IBAN / BIC : <span th:text="${ibanJss}"></span> /
+                                                                    <span th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en flashant le QR
                                                                     Code ci-dessous ou en cliquant <a
                                                                         th:href="${cbLink}" target="_blank">ici</a>.</p>
